--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "gatsby-plugin-i18n": "^1.0.1",
     "gatsby-plugin-manifest": "^2.2.0",
     "gatsby-plugin-react-helmet": "^3.1.0",
+    "gatsby-plugin-robots-txt": "^1.5.1",
     "gatsby-plugin-sass": "^2.1.0",
     "gatsby-plugin-sharp": "^2.2.1",
-    "gatsby-plugin-sitemap": "^2.2.22",
+    "gatsby-plugin-sitemap": "^2.4.11",
     "gatsby-plugin-zopfli": "^1.3.2",
     "gatsby-remark-autolink-headers": "^2.1.16",
     "gatsby-remark-images": "^3.1.2",
