--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-helmet": "^5.2.1",
     "react-marquee-slider": "^1.0.16",
     "react-tooltip": "^4.2.6",
-    "styled-components": "^5.1.0"
+    "styled-components": "^5.1.0",
+    "gatsby-remark-copy-linked-files": "^2.3.19"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
