--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: publish to Dockerhub
 on:
   push:
     branches:
-      - 'master'
+      - "master"
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -16,6 +16,10 @@ jobs:
     steps:
       - name: Check out Git repository
         uses: actions/checkout@v1
+
+      - name: Install autoconf
+        run: |
+          apt-get install autoconf
 
       - name: Docker login
         run: echo '${{ secrets.DOCKER_PWD }}' | docker login --username ${{ secrets.DOCKER_USERNAME }} --password-stdin
