--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Install autoconf
         run: |
-          apt-get install autoconf
+          sudo apt-get install autoconf
 
       - name: Docker login
         run: echo '${{ secrets.DOCKER_PWD }}' | docker login --username ${{ secrets.DOCKER_USERNAME }} --password-stdin
