--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gatsby-transformer-sharp": "^3.0.0",
     "highlight.js": "^10.6.0",
     "node-sass": "^5.0.0",
+    "node-html-parser": "^3.3.4",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
