--- a/package.json
+++ b/package.json
@@ -1,33 +1,35 @@
 {
-  "name": "mivlus.io",
+  "name": "mivlus.io.builder",
   "private": true,
-  "description": "Milvus.io website",
-  "version": "0.1.0",
+  "description": "Milvus.io website gatsby image",
+  "version": "0.1.1",
   "author": "zizhao.chen@zilliz.com",
   "dependencies": {
-    "dotenv": "^8.2.0",
-    "gatsby": "^3.0.0",
-    "gatsby-image": "^3.0.0",
-    "gatsby-plugin-google-analytics": "^3.0.0",
-    "gatsby-plugin-google-tagmanager": "^3.0.0",
-    "gatsby-plugin-gtag": "^1.0.11",
+    "@sentry/gatsby": "^6.3.5",
+    "axios": "^0.21.1",
+    "dotenv": "^10.0.0",
+    "gatsby": "^3.6.2",
+    "gatsby-image": "^3.6.0",
+    "gatsby-plugin-google-analytics": "^3.6.0",
+    "gatsby-plugin-google-tagmanager": "^3.6.0",
+    "gatsby-plugin-gtag": "^1.0.13",
     "gatsby-plugin-i18n": "^1.0.1",
+    "gatsby-plugin-less": "^5.4.0",
     "gatsby-plugin-manifest": "^3.0.0",
     "gatsby-plugin-react-helmet": "^4.0.0",
     "gatsby-plugin-robots-txt": "^1.5.5",
-    "gatsby-plugin-sass": "^4.0.2",
     "gatsby-plugin-sharp": "^3.0.0",
-    "gatsby-plugin-sitemap": "^3.0.0",
+    "gatsby-plugin-sitemap": "^4.0.0",
     "gatsby-plugin-zopfli": "^2.0.0",
-    "gatsby-remark-autolink-headers": "^3.0.0",
-    "gatsby-remark-copy-linked-files": "^3.0.0",
-    "gatsby-remark-images": "^4.0.0",
+    "gatsby-remark-autolink-headers": "^4.3.0",
+    "gatsby-remark-copy-linked-files": "^4.3.0",
+    "gatsby-remark-images": "^5.3.0",
     "gatsby-source-filesystem": "^3.0.0",
     "gatsby-transformer-json": "^3.0.0",
-    "gatsby-transformer-remark": "^3.0.0",
+    "gatsby-transformer-remark": "^4.3.0",
     "gatsby-transformer-sharp": "^3.0.0",
-    "highlight.js": "^10.6.0",
-    "node-sass": "^5.0.0",
+    "highlight.js": "^11.0.0",
+    "lottie-web": "^5.7.8",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
