--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-plugin-sharp": "^3.0.0",
     "gatsby-plugin-sitemap": "^4.0.0",
     "gatsby-plugin-zopfli": "^2.0.0",
+    "gatsby-plugin-sass": "^4.0.2",
     "gatsby-remark-autolink-headers": "^4.3.0",
     "gatsby-remark-copy-linked-files": "^4.3.0",
     "gatsby-remark-images": "^5.3.0",
